section 4 below section alignments corrected

--- a/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
+++ b/src/Views/StaticSite/Views/Courses/Views/Nutridiet.scss
@@ -1290,12 +1290,12 @@ border-bottom-width: 1px;
   padding: 10px 20px;
   font-size: 22px;
   font-weight: 700;
-  position: relative;
-  left: 13%;
+  // position: relative;
+  // left: 13%;
   width: 548px;
   // height: 325px;
   gap: 20px;
-  top: 15%;
+  // top: 15%;
   border-radius: 4px;
   cursor: pointer;
   // width: 100%;
@@ -3558,32 +3558,40 @@ align-items: center;
   }
 
  .contact-wrapper {
-  max-width: 800px;
-  margin: 0 auto;
+  // max-width: 800px;
+  // margin: 0 auto;
   padding: 20px;
+  background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   
   // background-color: #fff;
 }
 
 .contact-container {
   background-color: #03393F;
-  color: #f0f0f0;
-  border-radius: 8px;
-  padding: 20px;
-  margin-bottom: 20px;
-  width: 1025px;
-height: 521px;
-top: 3350px;
-left: 225px;
-border-bottom-right-radius: 12px;
-border-bottom-left-radius: 20px;
-border-top-width: 1px;
-border-bottom-width: 1px;
-padding-top: 30px;
-padding-right: 150px;
-padding-bottom: 30px;
-padding-left: 150px;
-gap: 30px;
+    display: flex
+;
+    flex-direction: column;
+    color: #f0f0f0;
+    border-radius: 8px;
+ 
+    margin-bottom: 20px;
+    width: 80%;
+   
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 20px;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    padding-top: 30px;
+    padding-right: 84px;
+    padding-bottom: 30px;
+    padding-left: 84px;
+    gap: 30px;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -3595,10 +3603,6 @@ gap: 30px;
 }
 
 .page-header p {
-  width: 858px;
-height: 72px;
-position: relative;
-right: 15%;
   font-family: 'Urbanist';
   font-weight: 600;
   font-size: 24px;
@@ -3623,13 +3627,13 @@ height: 4px;
 }
 
 .contact-button {
-  width: 548px;
-  height: 58px;
+  width: 100%;
+  height: 100%;
   padding-top: 14px;
   padding-right: 20px;
   padding-bottom: 14px;
   padding-left: 20px;
-  top: 5%;
+  // top: 5%;
   gap: 6px;
   border-radius: 8px;
   border-width: 1px;
@@ -3638,10 +3642,15 @@ height: 4px;
 }
 
 .contact-box {
-  width: 548px;
-height: 325px;
-gap: 20px;
-position: relative;
+//   width: 548px;
+// height: 325px;
+// gap: 20px;
+// position: relative;
+display: flex
+;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -3652,7 +3661,7 @@ position: relative;
   gap: 10px;
   width: 548px;
 height: 247px;
-position: relative;
+// position: relative;
     left: 13%;
 gap: 24px;
 border-radius: 8px;
@@ -3667,7 +3676,11 @@ background: #F6FBE9;
 .contact-item {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 77px;
+}
+
+.contact_social_wrapper {
+  display: flex;
 }
 
 .contact-icon {
